--- a/package.json
+++ b/package.json
@@ -5,7 +5,17 @@
   "main": "index.js",
   "author": "can-dy-jack <jjack_chen3@163.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
+  },
   "devDependencies": {
     "vuepress": "^2.0.0-beta.27"
+  },
+  "dependencies": {
+    "@vuepress/theme-default": "^2.0.0-beta.27",
+    "vuepress-plugin-coze": "^1.7.2",
+    "vuepress-plugin-meting": "^0.3.1",
+    "vuepress-theme-yuu": "^3.1.1"
   }
 }
